feat: Add more granular config for model observability during deployment (#619)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->
# Description
<!-- Briefly describe the motivation for the change. Please include
illustrations where appropriate. -->
Adding `model_observability` configuration that contains:
* Enable -> Whether the model observability is enabled or not
* Ground Truth Source -> The source for ground truth which later on will
be use to ingest ground truth
* Ground Truth Job -> The Job configuration to ingest ground truth
* Prediction Log Ingestion Resource -> Resource configuration for
observability publisher worker, currently we use default value that is
set on platform level
# Modifications
<!-- Summarize the key code changes. -->
* Modify swagger
* Regenerate python client from modified swagger spec
* Modify model_observability model
* Update deployment of observability publisher worker
* Update merlin sdk so user can supply `model_observability` config
during deployment

# Tests
<!-- Besides the existing / updated automated tests, what specific
scenarios should be tested? Consider the backward compatibility of the
changes, whether corner cases are covered, etc. Please describe the
tests and check the ones that have been completed. Eg:
- [x] Deploying new and existing standard models
- [ ] Deploying PyFunc models
-->

# Checklist
- [x] Added PR label
- [x] Added unit test, integration, and/or e2e tests
- [ ] Tested locally
- [ ] Updated documentation
- [x] Update Swagger spec if the PR introduce API changes
- [x] Regenerated Golang and Python client if the PR introduces API
changes

# Release Notes
<!--
Does this PR introduce a user-facing change?
If no, just write "NONE" in the release-note block b
